--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,36 @@
     <title>Document</title>
   </head>
   <body>
-    Hello
+    <h1>Registration</h1>
+    <form id="reg-form">
+      <input type="text" id="username" placeholder="Username" />
+      <input type="password" id="password" placeholder="Password" />
+      <input type="submit" value="Submit Form" />
+    </form>
+
+    <script>
+      const form = document.getElementById("reg-form");
+      form.addEventListener("submit", registerUser);
+
+      async function registerUser(event) {
+        event.preventDefault();
+
+        const username = document.getElementById("username").value;
+        const password = document.getElementById("password").value;
+
+        const result = await fetch("/api/register", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            username,
+            password,
+          }),
+        }).then((res) => res.json());
+
+        console.log(result);
+      }
+    </script>
   </body>
 </html>
