--- a/static/login.html
+++ b/static/login.html
@@ -7,24 +7,24 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Registration</h1>
-    <form id="reg-form">
+    <h1>Log-In</h1>
+    <form id="login">
       <input type="text" id="username" required placeholder="Username" />
       <input type="password" id="password" required placeholder="Password" />
       <input type="submit" value="Submit Form" />
     </form>
 
     <script>
-      const form = document.getElementById("reg-form");
-      form.addEventListener("submit", registerUser);
+      const form = document.getElementById("login");
+      form.addEventListener("submit", login);
 
-      async function registerUser(event) {
+      async function login(event) {
         event.preventDefault();
 
         const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
 
-        const result = await fetch("/api/register", {
+        const result = await fetch("/api/login", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -36,7 +36,7 @@
         }).then((res) => res.json());
 
         if (result.status === "ok") {
-          alert("Success!");
+          console.log("Got the token: ", result.data);
         } else {
           alert(result.error);
         }
