--- a/static/change-password.html
+++ b/static/change-password.html
@@ -7,37 +7,34 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Log-In</h1>
-    <form id="login">
-      <input type="text" id="username" required placeholder="Username" />
+    <h1>Change Password</h1>
+    <form id="change-password">
       <input type="password" id="password" required placeholder="Password" />
       <input type="submit" value="Submit Form" />
     </form>
 
     <script>
-      const form = document.getElementById("login");
-      form.addEventListener("submit", login);
+      const form = document.getElementById("change-password");
+      form.addEventListener("submit", changePassword);
 
-      async function login(event) {
+      async function changePassword(event) {
         event.preventDefault();
 
-        const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
 
-        const result = await fetch("/api/login", {
+        const result = await fetch("/api/change-password", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
           },
           body: JSON.stringify({
-            username,
-            password,
+            newpassword: password,
+            token: localStorage.getItem("token"),
           }),
         }).then((res) => res.json());
 
         if (result.status === "ok") {
-          console.log("Got the token: ", result.data);
-          localStorage.setItem("token", result.data);
+          console.log("success");
         } else {
           alert(result.error);
         }
